--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<jdk.version>1.6</jdk.version>
 		<spring.version>3.2.13.RELEASE</spring.version>
 		<jstl.version>1.2</jstl.version>
-
+		<sonar.host.url>http://3.85.236.76:9000</sonar.host.url>
 	</properties>
 
 	<dependencies>
