--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,12 +21,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: clone repo
       run: git clone https://github.com/KarthikKumarBA/react-login.git
+    - name: commands
+      run: |
+        ls -l
       
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
